--- a/TG2.Rmd
+++ b/TG2.Rmd
@@ -23,7 +23,34 @@ El 11 de marzo de 2020, la Organización Mundial de la Salud calificó a la enfe
 Nuestro país no ha sido la excepción de esta situación. De hecho, en el Perú la pandemia se agravó por un conjunto de falencias estructurales en nuestro sistema educativo y resaltó las carencias y diferencias de la educación privada frente a la pública, tanto en el sector urbano como en el rural. Además, las constantes turbulencias políticas, la demora del Estado en la compra y acceso de dispositivos electrónicos, internet y la manera de adaptación de las clases al contexto virtual, el problema de la capacitación a los docentes en las TIC.
 Por todo lo mencionado, consideramos que es importante desarrollar estudios sobre el impacto y el desarrollo de la educación virtual en el 2020 a partir de la perspectiva de los docentes de colegios públicos. En esa línea, nuestra investigación se realizará a nivel educación y se centrará en cómo este nuevo modelo de educación virtual ha impactado en el desarrollo de las actividades laborales y personales de los docentes de colegios públicos.
 
-#FALTA ACCION ESTATAL
+*Literatura previa*
+Actualmente, vivimos en un mundo globalizado en el que la tecnología como la que conocemos se viene incorporando en todos los ámbitos. La educación es uno de los sectores que, a lo largo de los años, ha ido mejorando en el acceso a la información a través de la tecnología y, por consiguiente, se va mejorando los conocimientos. En el Perú, desde el año 1998 se viene implementando las Tecnologías de la Información y Comunicación (TIC) en un inicio como una estrategia populista con el objetivo de llevar a la educación a un nivel superior al que se poseía con el cual se llegaría a las zonas rurales cuya presencia ha sido más complicada (Muñoz et al., 2013).
+Según el diccionario Cambridge, las TIC son una materia de la escuela en la cual los estudiantes aprenden a usar computadoras y otros equipos electrónicos para almacenar y enviar información[1] (traducción propia). Además, la Unesco la define como estrategia que complementa, enriquece y transforma la educación.[2] Por lo que nos referiremos como TIC al aprovechamiento en la interacción con la información, gestión de la comunicación y aprendizaje; todo esto posible gracias al uso de las computadoras y equipos electrónicos (Ministerio de Educación, 2016).
+En un inicio, al implementar las TIC en nuestro país se presentó una serie de problemas; por esta razón, a partir del 2010 con el Diseño del Currículo de Educación Básica se buscó solucionar para su permanencia mediante la capacitación a los docentes en el uso de estas estrategias TIC. Para el Organismo de Estados Internacionales (OEI) esta implementación no puede ser introducida como variables independientes, pues puede generar inseguridad en los adultos de las comunidades escolares, es decir, los docentes. Por eso, es necesario acompañarlo con procesos de apoyo y capacitación para evitar desaprovechar la oportunidad de educación de las TIC (Mateus, 2016).
+Según el Censo escolar del 2011, el 17,4% de las escuelas primarias y el 36,7% de las secundarias del país cuentan con acceso a Internet (Muñoz et al., 2013). Esta es una de las situaciones observadas respecto a la brecha digital, que se basa en el acceso a los medios tecnológicos y de información con relevancia en Internet. Esto se observa en nuestro país con diferencia en las zonas rurales y en las poblaciones que presentan niveles de pobreza, pues el acceso a este servicio es nulo o escaso; así mismo, esta diferencia se complementa con el acceso a la educación (Chumpitaz, 2012). Al existir esta brecha, los estudiantes y docentes son vulnerables a una menor oportunidad frente a los que poseen mayor acceso (Chumpitaz, 2012). En un contexto de pandemia como el que se dió el 2020, esta afirmación se refuerza y por tanto es una realidad que se manifiesta en nuestro país. 
+Cabe resaltar que el tipo de educación que se llevó a cabo en nuestro país en colegios públicos en el contexto de pandemia fue virtual complementado con el programa de “Aprendo en casa” que es una multiplataforma de internet, radio, televisión y celular. Asimismo, es relevante mencionar las definiciones de los conceptos de educación virtual, educación a distancia y educación presencial para un correcto desarrollo del trabajo. 
+Por educación presencial entendemos que los estudiantes acuden a un aula física donde transcurre la enseñanza y el aprendizaje. En esta modalidad los alumnos adquieren un papel más pasivo y se adaptan al ritmo y al método del profesor, que se convierte en la principal fuente de consulta (Iberdrola 2021).
+Por educación a distancia se entiende que es una modalidad en el que los alumnos tienen control sobre el tiempo, espacio y ritmo del aprendizaje, no es necesaria una conexión a internet. Los materiales a utilizar pueden ser físicos, por ejemplo cuadernillos y libros, o multimedia mediante memorias USB o CD y el acompañamiento y la retroalimentación entre el profesor y el alumno se lleva a cabo por teléfono mediante llamadas o mensajes de texto. En algunos sistemas educativos, esta modalidad se apoya en la radio y la televisión para llegar a contextos en los que no es posible una conexión telefónica (Guerrero Hernández, 2020).
+Por educación virtual entendemos a una recurre a Internet y a las tecnologías de la información y la comunicación (TIC) para facilitar a los alumnos herramientas didácticas que dinamicen el curso y lo hagan más intuitivo y fácil de seguir. Este sistema asíncrono permite a los estudiantes asistir a clase, trabajar, comunicarse, examinarse y acceder a los contenidos desde cualquier lugar. Es necesario resaltar que la definición en la que se basa el trabajo es de una educación virtual por el contexto de pandemia y cuarentena a la que se pasó gran parte del 2020 y por ende, afectó en la labor docente de las escuelas públicas que es nuestro caso de importancia (Iberdrola 2021).
+Y por educación online se entiende como todas las ventajas de la modalidad virtual pero con una característica extra: es sincrónica, es decir el profesor y los alumnos coinciden en el horario (Guerrero Hernández, 2020).
+
+
+[1] “information and communication technology (ICT): a school subject in which students learn to use computers and other electronic equipment to store and send information” Ver: https://dictionary.cambridge.org/es/diccionario/ingles/ict
+[2] “Las TIC en la Educación” Organización de las Naciones Unidas para la Educación, la Ciencia y la Cultura (UNESCO)  Ver: https://es.unesco.org/themes/tic-educacion
+
+BIBLIOGRAFÍA
+Chumpitaz, L. (2012). La formación de docentes de Educación básica en el uso educativo de las TIC y la reducción de la brecha digital. Educación, 16(31), 29–42.
+ENDO (2020). ENDO REMOTO 2020. Recuperado de ENDO
+http://escale.minedu.gob.pe/uee/-/document_library_display/GMv7/view/6981285 
+
+Guerrero Hernández, Jorge Alberto (09 de agosto de 2020). Educación a distancia, virtual y en línea: ¿Cuál es la diferencia?. Docentes al día. https://docentesaldia.com/2020/08/09/educacion-a-distancia-virtual-y-en-linea-cual-es-la-diferencia/ 
+Iberdrola (2021). Formación a distancia o formación presencial, ¿cuál elegir?.  Iberdrola https://www.iberdrola.com/talento/educacion-presencial-vs-virtual 
+Ministerio de Educación. 
+(2016). Currículo Nacional de la Educación Básica. Currículo Nacional de la Educación Básica, 224. Recuperado a partir de http://www.minedu.gob.pe/curriculo/pdf/curriculo-nacional-de-la-educacion-basica.pdf
+(2020). FICHA TÉCNICA – ENCUESTA NACIONAL A DOCENTES DE INSTITUCIONES EDUCATIVAS PÚBLICAS – ENDO REMOTO 2020. ESCALE. Recuperado a partir de http://escale.minedu.gob.pe/documents/10156/6b6b3f60-7dfd-4e39-be11-d59f9eb43591 
+Mateus, J. (2016). Abrumados y fascinados: Las TIC en la subjetividad de los docentes peruanos. Revista de Estudios para el Desarrollo Social de la Comunicación, 170–193. Recuperado a partir de https://doi.org/10.15213/redes.n12.p171
+Muñoz, L., Brenes, M., Bujanda, M. E., Mora, M., Núñez, O., Zúñiga, M., & UNICEF. (2013). Programa TIC y Educación Básica. Las políticas TIC en los sistemas educativos de América Latina: Caso Perú. Fondo de las Naciones Unidas para la Infancia (UNICEF), (January 2013), 162. Recuperado a partir de https://www.researchgate.net/publication/326286988_Las_Politicas_TIC_en_America_Latina_-_el_caso_peruano_Programa_TIC_y_Educacion_Basica_UNICEF 
+
 
 #ANÁLISIS DE DATOS
 
@@ -682,7 +709,6 @@ Identificar las condiciones del entorno doméstico del docente que dificultan el
 Se plantea como hipótesis que los factores que más han afectado el desarrollo de las actividades laborales y personales de los docentes son la edad, el sexo, el número de estudiantes a los que brinda acompañamiento, el padecimiento de enfermedades, la participación de programas o estrategias formativas, y la percepción de dificultad del quehacer docente en el contexto de educación virtual.
 
 *Unidad de estudio*: Docentes de Educación Básica Regular (EBR)
-
 
 *Hallando las medidas de dispersion y centralidad de las variables numericas a utilizar en nuestro trabajo*
 
